--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found in a bay south of the Spanish enclave of Ceuta (ES) after trying to swim to Spain</b><br>Source: MNS<br>
+Found dead: <b>18/04/17</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N. (4 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of thirst and hunger after boat broke down off coast of Sabratha (LY)</b><br>Source: Reu.<br>
 
 <br>
 
