--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/04/17</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N. (4 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of thirst and hunger after boat broke down off coast of Sabratha (LY)</b><br>Source: Reu.<br>
+Found dead: <b>21/08/08</b><br>Number of person: <b>35</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation on boat travelling from Morocco to Almería (ES); 25 survivors</b><br>Source: BBC/NYtimes/GuardianUn./PICUM/MSN/NOB<br>
 
 <br>
 
