--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/09/01</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned, bodies washed ashore after shipwreck near Rabat (MA)</b><br>Source: MNS/AP/IRR/ODP<br>
+Found dead: <b>20/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died after being thrown overboard while attempting to cross the Strait of Sicily</b><br>Source: ST/FE/Unipa<br>
 
 <br>
 
