--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/08/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 pregnant women)</b><br>Region of origin: <b>Eritrea, Ethiopia</b><br>Cause of death: <b>died of starvation during journey from Libya to Italy</b><br>Source: FE/IlMess/KI<br>
+Found dead: <b>19/03/08</b><br>Number of person: <b>40</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt, Seneg, Nig, Som, Tun</b><br>Cause of death: <b>drowned after boat sank near coast of Zawia (LY) while travelling to Lampedusa (IT)</b><br>Source: FE/CDS<br>
 
 <br>
 
