--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/03/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>drowned near coast of the Spanish enclave of Melilla (ES) after being forced overboard by smuggler</b><br>Source: MNS/EP<br>
+Found dead: <b>07/11/14</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>hit by train while walking along tracks between Greece and Turkey</b><br>Source: HurriyetDN/Mail Online<br>
 
 <br>
 
