--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ako Mahmood Ahmed (man, 25)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>suicide, jumped off bridge in Coventry shopping centre (GB), asylum request rejected</b><br>Source: IRR/NCADC<br>
+Found dead: <b>13/09/15</b><br>Number of person: <b>34</b><br>Name, gender, age: <b>N.N. (4 babies; 11 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned near Farmakonisi (GR) when overcrowded wooden boat was hit in the Aegean Sea</b><br>Source: GuardianUn./AthensNewsAgency/Mail Online<br>
 
 <br>
 
