--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 63)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>died in camp in Opatovac (HR), possibly on way to Germany</b><br>Source: AP<br>
+Found dead: <b>03/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Oder River near Brieskow-Finkenheerd (DE) close to Polish-German border</b><br>Source: FFM/ZAG<br>
 
 <br>
 
