--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/06/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of unknown causes in hospital in Lampedusa (IT) after being rescued off coast of Libya</b><br>Source: Proactiva/IOM<br>
+Found dead: <b>12/01/03</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned when boat sank near Fuerteventura (ES) on way to Spain</b><br>Source: NOB<br>
 
 <br>
 
