--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bouboucar Bah (man, 32)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when small wooden boat capsized off coast of the Spanish enclave of Melilla (ES); 1 survivor</b><br>Source: PRI/PrivateSource/BBC/El Diario/Caminando/IOM<br>
+Found dead: <b>28/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 16)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned after being thrown overboard by smugglers on boat of 80 migrants as patrol boat approached</b><br>Source: Migreurop/LRP<br>
 
 <br>
 
