--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 16)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned after being thrown overboard by smugglers on boat of 80 migrants as patrol boat approached</b><br>Source: Migreurop/LRP<br>
+Found dead: <b>Oct 02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat carrying 42 migrants sank off coast of Barbate (ES)</b><br>Source: IRR<br>
 
 <br>
 
