--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/03/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mesfin Germa (man)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>hit by truck walking into Port of Calais (FR) while trying to get to Great Britain</b><br>Source: CMS/DM<br>
+Found dead: <b>27/09/08</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Georgia, unknown</b><br>Cause of death: <b>died in minefield in Kastanea near Evros (GR) on way to Greece</b><br>Source: NOB/KI<br>
 
 <br>
 
