--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/11/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, suffocated in back of truck entering the Channel Tunnel (FR) on way to Great Britain</b><br>Source: FE/Mail Online/IRR<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 children; 1 woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after overcrowded boat to Lesbos (GR) sank near Ayvacik (TR) in rough sea; 21 rescued</b><br>Source: Imkander<br>
 
 <br>
 
