--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/08/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Amdi Mostafa (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>jumped from balcony of room in asylum centre in Haldensleben (DE)</b><br>Source: AyslstrikeBerlin/RefugeeProtest<br>
+Found dead: <b>06/05/11</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned after boat carrying 600 migrants to Italy sank off coast of Tripoli (LY)</b><br>Source: Corrispondenti/VF/LR/WP/ABC/UNHCR/UN/MaltaT<br>
 
 <br>
 
