--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/03/09</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N. (4 women; 7 men)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of dehydration in the Libyan/Nigerian desert while trying to reach Italy, abandoned by Libyan authorities</b><br>Source: NOB/LR<br>
+Found dead: <b>02/05/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, electrocuted in Paris while climbing on roof of Eurostar train to London (GB)</b><br>Source: Sun<br>
 
 <br>
 
