--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/05/17</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned during 24 hour rescue operation between Libya and Italy; 2200 rescued</b><br>Source: DailySabah<br>
+Found dead: <b>07/09/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of heart attack in hospital after arriving by boat in La Gomera (ES) with 117 migrants</b><br>Source: NOB/EP<br>
 
 <br>
 
