--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/11/06</b><br>Number of person: <b>24</b><br>Name, gender, age: <b>N.N. (8 children)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>disappeared after boat capsized near Laayoune (EH) on way to Spain</b><br>Source: AFVIC/Reu./ELM/FE/NOB/MNS/APDHA/PICUM<br>
+Found dead: <b>22/01/08</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Cádiz (ES) after small boat capsized while travelling to Spain</b><br>Source: EP<br>
 
 <br>
 
