--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/01/08</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Cádiz (ES) after small boat capsized while travelling to Spain</b><br>Source: EP<br>
+Found dead: <b>Feb 99</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 babies)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>died from poor hygiene conditions in refugee camp at Muratella (IT)</b><br>Source: IRR<br>
 
 <br>
 
