--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/04/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>S. D. (man, 31)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of asthma attack while awaiting expulsion from detention centre in the Spanish enclave of Ceuta (ES)</b><br>Source: ST/FE/ELM/NODO50<br>
+Found dead: <b>15/09/15</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N. (4 children; 11 women; 7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when boat capsized off Bodrum (TR) while trying to reach Kos (GR)</b><br>Source: Irish Times/Reu./DHA/Ya.N/Clandestina/AFP<br>
 
 <br>
 
