--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/06/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies found in advanced state of decomposition 20 miles north of Zuwara (LY)</b><br>Source: JugendR/IOM/Proactiva<br>
+Found dead: <b>31/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Amed Agaj (man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned in the Adriatic Sea when rubber boat travelling to Italy sank</b><br>Source: DPA/Morgengr./taz/VK/CDS/LS/TL<br>
 
 <br>
 
