--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/08/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>hit by train while walking along tracks in Evros border region between Alexandroupoli and Dikaia (GR)</b><br>Source: AP/IOM Greece/Ekathimerini<br>
+Found dead: <b>19/03/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ama Sumani (woman, 39)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>died of cancer in Ghana after being deported from hospital in Great Britain after visa expired</b><br>Source: BBC/WIK/Independent/Times/IRR<br>
 
 <br>
 
