--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/09/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±27)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>body found off coast of Motril (ES), had reportedly been travelling on boat intercepted days earlier</b><br>Source: ABC<br>
+Found dead: <b>14/07/07</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men, ±25)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaways, found frozen to death in truck near Mestre (IT) on way to Germany</b><br>Source: LR/Unita/CDS/Tgcom24/AP/MNS<br>
 
 <br>
 
