--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/01/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, found dead in Pasaia (ES) on cargo ship coming from Cameroon</b><br>Source: ST/MNS<br>
+Found dead: <b>26/05/08</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after boat capsized 85 miles south of Malta; 13 survivors</b><br>Source: NOB/TimesM<br>
 
 <br>
 
