--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/04/16</b><br>Number of person: <b>500</b><br>Name, gender, age: <b>N.N. (100 children; 400 adults)</b><br>Region of origin: <b>Ethiopia, Sud, Egy, Som, Syr</b><br>Cause of death: <b>drowned in the Mediterranean Sea after smugglers tried to combine passengers of 2 boats from Libya and Egypt</b><br>Source: IOM/UNHCR/NYtimes/GuardianUn./MigrantReport<br>
+Found dead: <b>30/11/95</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after dinghy sank off the Strait of Otranto near Italy</b><br>Source: TL<br>
 
 <br>
 
