--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/09/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Janvier Makiadi "Paul Kiese" (m, 31)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>suicide, found hanging under footbridge crossing the River Spodden (GB) after asylum claim was rejected</b><br>Source: RochdaleObs/IRR<br>
+Found dead: <b>11/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards near Darkush (SY) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
