--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned on way to Spain, found near the Spanish enclave of Ceuta (ES)</b><br>Source: Diario de Noticias<br>
+Found dead: <b>Mar 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Raif (boy, 2)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>missing after boat sank between Libya and Italy; mother drowned, father and 3 siblings survived</b><br>Source: SP<br>
 
 <br>
 
