--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Farideh Karimi (woman, 42)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>died of cancer and medical neglect at asylum centre in Appelscha (NL)</b><br>Source: MAG/VK<br>
+Found dead: <b>06/12/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bai Ahmed Kabia (man, 49)</b><br>Region of origin: <b>Sierra Leone</b><br>Cause of death: <b>died in hospital of untreated illness after being held in detention for 2 years in Morton Hall (GB)</b><br>Source: GuardianUn.<br>
 
 <br>
 
