--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/12/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bai Ahmed Kabia (man, 49)</b><br>Region of origin: <b>Sierra Leone</b><br>Cause of death: <b>died in hospital of untreated illness after being held in detention for 2 years in Morton Hall (GB)</b><br>Source: GuardianUn.<br>
+Found dead: <b>31/07/08</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 women; 1 man)</b><br>Region of origin: <b>Africa, Iraq</b><br>Cause of death: <b>drowned, bodies found at sea during rescue operation by armed forces between Malta and Libya</b><br>Source: NOB/TimesM<br>
 
 <br>
 
